--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "string-width": "^1.0.2 || 2 || 3 || 4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.45.0"
